yaml/min-cluster-allinone/traefik/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: biz
  #labels:
    #app: kibana
  name: traefik-admin
  namespace: kube-system
spec:
  rules:
  - host: traefik-admin.future.com
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
        path: /
